Design Contact Us Section

--- a/index.html
+++ b/index.html
@@ -329,7 +329,8 @@
         </section>
         <!-- FAQ Section -->
         <section class="mb-6 md:mb-[5.5rem] lg:mb-[7.5rem]">
-            <h2 class="max-md:w-19/20 font-garamond text-3xl md:text-[2.5rem] font-extrabold text-center text-[#414040] mb-6">
+            <h2
+                class="max-md:w-19/20 font-garamond text-3xl md:text-[2.5rem] font-extrabold text-center text-[#414040] mb-6">
                 Frequently Asked Any Questions</h2>
             <p
                 class="text-sm md:text-base font-normal leading-[1.625rem] text-[#707070] w-[90%] max-w-[44.625rem] text-center mx-auto mb-8 md:mb-[4rem]">
@@ -339,31 +340,106 @@
                 <div class="w-19/20 lg:w-1/2 flex flex-col gap-4 md:gap-[1.88rem]">
                     <div class="collapse collapse-plus p-4 lg:p-3 xl:p-4 bg-base-100 border border-base-300">
                         <input type="radio" name="my-accordion-3" checked="checked" />
-                        <div class="collapse-title font-garamond text-lg md:text-xl xl:text-2xl font-extrabold text-[#414040]">1. Are application fee waivers available?</div>
-                        <div class="collapse-content text-[#707070] text-sm xl:text-base font-normal leading-[1.625rem]">There are many variations of passages of Lorem Ipsum
+                        <div
+                            class="collapse-title font-garamond text-lg md:text-xl xl:text-2xl font-extrabold text-[#414040]">
+                            1. Are application fee waivers available?</div>
+                        <div
+                            class="collapse-content text-[#707070] text-sm xl:text-base font-normal leading-[1.625rem]">
+                            There are many variations of passages of Lorem Ipsum
                             available, but the majority have suffered alteration in some form, by injected humour.</div>
                     </div>
                     <div class="collapse collapse-plus p-4 lg:p-3 xl:p-4 bg-base-100 border border-base-300">
-                        <input type="radio" name="my-accordion-3"/>
-                        <div class="collapse-title font-garamond text-lg md:text-xl xl:text-2xl font-extrabold text-[#414040]">2. Are application fee waivers available?</div>
-                        <div class="collapse-content text-[#707070] text-sm xl:text-base font-normal leading-[1.625rem]">There are many variations of passages of Lorem Ipsum
+                        <input type="radio" name="my-accordion-3" />
+                        <div
+                            class="collapse-title font-garamond text-lg md:text-xl xl:text-2xl font-extrabold text-[#414040]">
+                            2. Are application fee waivers available?</div>
+                        <div
+                            class="collapse-content text-[#707070] text-sm xl:text-base font-normal leading-[1.625rem]">
+                            There are many variations of passages of Lorem Ipsum
                             available, but the majority have suffered alteration in some form, by injected humour.</div>
                     </div>
                     <div class="collapse collapse-plus p-4 lg:p-3 xl:p-4 bg-base-100 border border-base-300">
-                        <input type="radio" name="my-accordion-3"/>
-                        <div class="collapse-title font-garamond text-lg md:text-xl xl:text-2xl font-extrabold text-[#414040]">3. Are application fee waivers available?</div>
-                        <div class="collapse-content text-[#707070] text-sm xl:text-base font-normal leading-[1.625rem]">There are many variations of passages of Lorem Ipsum
+                        <input type="radio" name="my-accordion-3" />
+                        <div
+                            class="collapse-title font-garamond text-lg md:text-xl xl:text-2xl font-extrabold text-[#414040]">
+                            3. Are application fee waivers available?</div>
+                        <div
+                            class="collapse-content text-[#707070] text-sm xl:text-base font-normal leading-[1.625rem]">
+                            There are many variations of passages of Lorem Ipsum
                             available, but the majority have suffered alteration in some form, by injected humour.</div>
                     </div>
                     <div class="collapse collapse-plus p-4 lg:p-3 xl:p-4 bg-base-100 border border-base-300">
-                        <input type="radio" name="my-accordion-3"/>
-                        <div class="collapse-title font-garamond text-lg md:text-xl xl:text-2xl font-extrabold text-[#414040]">4. Are application fee waivers available?</div>
-                        <div class="collapse-content text-[#707070] text-sm xl:text-base font-normal leading-[1.625rem]">There are many variations of passages of Lorem Ipsum
+                        <input type="radio" name="my-accordion-3" />
+                        <div
+                            class="collapse-title font-garamond text-lg md:text-xl xl:text-2xl font-extrabold text-[#414040]">
+                            4. Are application fee waivers available?</div>
+                        <div
+                            class="collapse-content text-[#707070] text-sm xl:text-base font-normal leading-[1.625rem]">
+                            There are many variations of passages of Lorem Ipsum
                             available, but the majority have suffered alteration in some form, by injected humour.</div>
                     </div>
                 </div>
                 <div class="flex w-19/20 lg:w-1/2 justify-center">
                     <img class="w-full max-w-[35.625rem] max-h-[35.825rem]" src="images/faq.png" alt="">
+                </div>
+            </div>
+        </section>
+        <!-- Contact Section -->
+        <section class="mb-6 md:mb-[5.5rem] lg:mb-[7.5rem]">
+            <h2
+                class="max-md:w-19/20 font-garamond text-3xl md:text-[2.5rem] font-extrabold text-center text-[#414040] mb-6">
+                Contact With Us</h2>
+            <p
+                class="text-sm md:text-base font-normal leading-[1.625rem] text-[#707070] w-[90%] max-w-[44.625rem] text-center mx-auto mb-8 md:mb-[4rem]">
+                There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                alteration in some form, by injected humour.</p>
+            <div class="flex flex-col lg:flex-row gap-4 xl:gap-[1.87rem] items-center justify-center px-2">
+                <div class="w-full md:w-8/10 lg:w-1/2 grid grid-cols-1 md:grid-cols-2 md:mb-4 lg:mb-0">
+                    <div class="flex flex-col items-center bg-[#F3F3F3] border border-[#CFCFCF] px-[1rem] xl:px-[3rem] py-[4.06rem]">
+                        <figure>
+                            <img class="mb-4" src="images/location.png" alt="location" />
+                        </figure>
+                        <div class="">
+                            <h2 class="font-garamond text-xl xl:text-2xl font-extrabold text-[#414040] text-center mb-4">Address</h2>
+                            <p class="text-base font-normal leading-[1.625rem] text-[#707070] text-center">A108 Adam Street,<br>New York, NY 535022</p>
+                        </div>
+                    </div>
+                    <div class="flex flex-col items-center bg-[#F3F3F3] border border-[#CFCFCF] px-[1rem] xl:px-[3rem] py-[4.06rem]">
+                        <figure>
+                            <img class="mb-4" src="images/call.png" alt="call" />
+                        </figure>
+                        <div class="">
+                            <h2 class="font-garamond text-xl xl:text-2xl font-extrabold text-[#414040] text-center mb-4">Call Us</h2>
+                            <p class="text-base font-normal leading-[1.625rem] text-[#707070] text-center">+88 01750 00 00 00<br>+88 01750 00 00 00</p>
+                        </div>
+                    </div>
+                    <div class="flex flex-col items-center bg-[#F3F3F3] border border-[#CFCFCF] px-[1rem] xl:px-[3rem] py-[4.06rem]">
+                        <figure>
+                            <img class="mb-4" src="images/email.png" alt="email" />
+                        </figure>
+                        <div class="">
+                            <h2 class="font-garamond text-xl xl:text-2xl font-extrabold text-[#414040] text-center mb-4">Email Us</h2>
+                            <p class="text-base font-normal leading-[1.625rem] text-[#707070] text-center">info@gmail.com<br>info@gmail.com</p>
+                        </div>
+                    </div>
+                    <div class="flex flex-col items-center bg-[#F3F3F3] border border-[#CFCFCF] px-[1rem] xl:px-[3rem] py-[4.06rem]">
+                        <figure>
+                            <img class="mb-4" src="images/time.png" alt="working hour" />
+                        </figure>
+                        <div class="">
+                            <h2 class="font-garamond text-xl xl:text-2xl font-extrabold text-[#414040] text-center mb-4">Working Hours</h2>
+                            <p class="text-base font-normal leading-[1.625rem] text-[#707070] text-center">Mon-Fri: 9AM to 5PM<br>Sunday: 9AM to 1 PM</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="w-full md:w-8/10 lg:w-1/2">
+                    <form class="flex flex-col gap-4 md:gap-[1.87rem]">
+                        <input type="text" class="bg-[#F3F3F3] text-base font-normal text-[#707070] leading-none p-4 md:p-[1.44rem] rounded-lg border border-[#F3F3F3] focus:border-[#CFCFCF] outline-none" placeholder="Your Name">
+                        <input type="email" class="bg-[#F3F3F3] text-base font-normal text-[#707070] leading-none p-4 md:p-[1.44rem] rounded-lg border border-[#F3F3F3] focus:border-[#CFCFCF] outline-none" placeholder="Your Email">
+                        <input type="text" class="bg-[#F3F3F3] text-base font-normal text-[#707070] leading-none p-4 md:p-[1.44rem] rounded-lg border border-[#F3F3F3] focus:border-[#CFCFCF] outline-none" placeholder="Subject">
+                        <textarea class="bg-[#F3F3F3] text-base font-normal text-[#707070] leading-none p-4 md:p-[1.44rem] rounded-lg border border-[#F3F3F3] focus:border-[#CFCFCF] outline-none h-[10.125rem]" placeholder="Your Message"></textarea>
+                        <button class="text-lg md:text-xl rounded-lg font-medium md:font-semibold text-white py-4 md:py-[1.32rem] bg-[#B68C5A]">Send Message</button>
+                    </form>
                 </div>
             </div>
         </section>
