Design Footer Section

--- a/index.html
+++ b/index.html
@@ -395,57 +395,145 @@
                 alteration in some form, by injected humour.</p>
             <div class="flex flex-col lg:flex-row gap-4 xl:gap-[1.87rem] items-center justify-center px-2">
                 <div class="w-full md:w-8/10 lg:w-1/2 grid grid-cols-1 md:grid-cols-2 md:mb-4 lg:mb-0">
-                    <div class="flex flex-col items-center bg-[#F3F3F3] border border-[#CFCFCF] px-[1rem] xl:px-[3rem] py-[4.06rem]">
+                    <div
+                        class="flex flex-col items-center bg-[#F3F3F3] border border-[#CFCFCF] px-[1rem] xl:px-[3rem] py-[4.06rem]">
                         <figure>
                             <img class="mb-4" src="images/location.png" alt="location" />
                         </figure>
                         <div class="">
-                            <h2 class="font-garamond text-xl xl:text-2xl font-extrabold text-[#414040] text-center mb-4">Address</h2>
-                            <p class="text-base font-normal leading-[1.625rem] text-[#707070] text-center">A108 Adam Street,<br>New York, NY 535022</p>
+                            <h2
+                                class="font-garamond text-xl xl:text-2xl font-extrabold text-[#414040] text-center mb-4">
+                                Address</h2>
+                            <p class="text-base font-normal leading-[1.625rem] text-[#707070] text-center">A108 Adam
+                                Street,<br>New York, NY 535022</p>
                         </div>
                     </div>
-                    <div class="flex flex-col items-center bg-[#F3F3F3] border border-[#CFCFCF] px-[1rem] xl:px-[3rem] py-[4.06rem]">
+                    <div
+                        class="flex flex-col items-center bg-[#F3F3F3] border border-[#CFCFCF] px-[1rem] xl:px-[3rem] py-[4.06rem]">
                         <figure>
                             <img class="mb-4" src="images/call.png" alt="call" />
                         </figure>
                         <div class="">
-                            <h2 class="font-garamond text-xl xl:text-2xl font-extrabold text-[#414040] text-center mb-4">Call Us</h2>
-                            <p class="text-base font-normal leading-[1.625rem] text-[#707070] text-center">+88 01750 00 00 00<br>+88 01750 00 00 00</p>
+                            <h2
+                                class="font-garamond text-xl xl:text-2xl font-extrabold text-[#414040] text-center mb-4">
+                                Call Us</h2>
+                            <p class="text-base font-normal leading-[1.625rem] text-[#707070] text-center">+88 01750 00
+                                00 00<br>+88 01750 00 00 00</p>
                         </div>
                     </div>
-                    <div class="flex flex-col items-center bg-[#F3F3F3] border border-[#CFCFCF] px-[1rem] xl:px-[3rem] py-[4.06rem]">
+                    <div
+                        class="flex flex-col items-center bg-[#F3F3F3] border border-[#CFCFCF] px-[1rem] xl:px-[3rem] py-[4.06rem]">
                         <figure>
                             <img class="mb-4" src="images/email.png" alt="email" />
                         </figure>
                         <div class="">
-                            <h2 class="font-garamond text-xl xl:text-2xl font-extrabold text-[#414040] text-center mb-4">Email Us</h2>
-                            <p class="text-base font-normal leading-[1.625rem] text-[#707070] text-center">info@gmail.com<br>info@gmail.com</p>
+                            <h2
+                                class="font-garamond text-xl xl:text-2xl font-extrabold text-[#414040] text-center mb-4">
+                                Email Us</h2>
+                            <p class="text-base font-normal leading-[1.625rem] text-[#707070] text-center">
+                                info@gmail.com<br>info@gmail.com</p>
                         </div>
                     </div>
-                    <div class="flex flex-col items-center bg-[#F3F3F3] border border-[#CFCFCF] px-[1rem] xl:px-[3rem] py-[4.06rem]">
+                    <div
+                        class="flex flex-col items-center bg-[#F3F3F3] border border-[#CFCFCF] px-[1rem] xl:px-[3rem] py-[4.06rem]">
                         <figure>
                             <img class="mb-4" src="images/time.png" alt="working hour" />
                         </figure>
                         <div class="">
-                            <h2 class="font-garamond text-xl xl:text-2xl font-extrabold text-[#414040] text-center mb-4">Working Hours</h2>
-                            <p class="text-base font-normal leading-[1.625rem] text-[#707070] text-center">Mon-Fri: 9AM to 5PM<br>Sunday: 9AM to 1 PM</p>
+                            <h2
+                                class="font-garamond text-xl xl:text-2xl font-extrabold text-[#414040] text-center mb-4">
+                                Working Hours</h2>
+                            <p class="text-base font-normal leading-[1.625rem] text-[#707070] text-center">Mon-Fri: 9AM
+                                to 5PM<br>Sunday: 9AM to 1 PM</p>
                         </div>
                     </div>
                 </div>
                 <div class="w-full md:w-8/10 lg:w-1/2">
                     <form class="flex flex-col gap-4 md:gap-[1.87rem]">
-                        <input type="text" class="bg-[#F3F3F3] text-base font-normal text-[#707070] leading-none p-4 md:p-[1.44rem] rounded-lg border border-[#F3F3F3] focus:border-[#CFCFCF] outline-none" placeholder="Your Name">
-                        <input type="email" class="bg-[#F3F3F3] text-base font-normal text-[#707070] leading-none p-4 md:p-[1.44rem] rounded-lg border border-[#F3F3F3] focus:border-[#CFCFCF] outline-none" placeholder="Your Email">
-                        <input type="text" class="bg-[#F3F3F3] text-base font-normal text-[#707070] leading-none p-4 md:p-[1.44rem] rounded-lg border border-[#F3F3F3] focus:border-[#CFCFCF] outline-none" placeholder="Subject">
-                        <textarea class="bg-[#F3F3F3] text-base font-normal text-[#707070] leading-none p-4 md:p-[1.44rem] rounded-lg border border-[#F3F3F3] focus:border-[#CFCFCF] outline-none h-[10.125rem]" placeholder="Your Message"></textarea>
-                        <button class="text-lg md:text-xl rounded-lg font-medium md:font-semibold text-white py-4 md:py-[1.32rem] bg-[#B68C5A]">Send Message</button>
+                        <input type="text"
+                            class="bg-[#F3F3F3] text-base font-normal text-[#707070] leading-none p-4 md:p-[1.44rem] rounded-lg border border-[#F3F3F3] focus:border-[#CFCFCF] outline-none"
+                            placeholder="Your Name">
+                        <input type="email"
+                            class="bg-[#F3F3F3] text-base font-normal text-[#707070] leading-none p-4 md:p-[1.44rem] rounded-lg border border-[#F3F3F3] focus:border-[#CFCFCF] outline-none"
+                            placeholder="Your Email">
+                        <input type="text"
+                            class="bg-[#F3F3F3] text-base font-normal text-[#707070] leading-none p-4 md:p-[1.44rem] rounded-lg border border-[#F3F3F3] focus:border-[#CFCFCF] outline-none"
+                            placeholder="Subject">
+                        <textarea
+                            class="bg-[#F3F3F3] text-base font-normal text-[#707070] leading-none p-4 md:p-[1.44rem] rounded-lg border border-[#F3F3F3] focus:border-[#CFCFCF] outline-none h-[10.125rem]"
+                            placeholder="Your Message"></textarea>
+                        <button
+                            class="text-lg md:text-xl rounded-lg font-medium md:font-semibold text-white py-4 md:py-[1.32rem] bg-[#B68C5A]">Send
+                            Message</button>
                     </form>
                 </div>
             </div>
         </section>
     </main>
-    <footer>
-
+    <footer class="bg-[#111]">
+        <section class="max-w-[71.25rem] mx-auto py-[7rem] px-3">
+            <div class="grid grid-cols-1 md:grid-cols-3 md:place-items-center lg:grid-cols-4 gap-8 md:gap-12 justify-between md:mb-10">
+                <div class="flex flex-col text-center md:text-left items-center md:items-start">
+                    <img class="mb-[2.06rem]" src="images/logo-footer.png" alt="">
+                    <p class="text-sm xl:text-base font-normal leading-[1.625rem] text-[#CFCFCF]">There are many variations of
+                        passages of Lorem Ipsum available, but the majority have suffered
+                        alteration in some form, by injected humour.</p>
+                </div>
+                <nav class="flex flex-col text-center md:text-left items-center md:items-start">
+                    <h6 class="font-garamond text-2xl font-extrabold text-white mb-4 md:mb-8 lg:mb-[2.94rem]">Useful Links</h6>
+                    <a class="text-sm xl:text-base font-normal leading-[1.625rem] mb-2 xl:mb-4 text-[#CFCFCF]">Home</a>
+                    <a class="text-sm xl:text-base font-normal leading-[1.625rem] mb-2 xl:mb-4 text-[#CFCFCF]">About Us</a>
+                    <a class="text-sm xl:text-base font-normal leading-[1.625rem] mb-2 xl:mb-4 text-[#CFCFCF]">Cases</a>
+                    <a class="text-sm xl:text-base font-normal leading-[1.625rem] mb-2 xl:mb-4 text-[#CFCFCF]">Blog</a>
+                    <a class="text-sm xl:text-base font-normal leading-[1.625rem] text-[#CFCFCF]">Contact Us</a>
+                </nav>
+                <nav class="flex flex-col text-center md:text-left items-center md:items-start">
+                    <h6 class="font-garamond text-2xl font-extrabold text-white mb-4 md:mb-8 lg:mb-[2.94rem]">Contact Now</h6>
+                    <p class="text-sm xl:text-base font-normal leading-[1.625rem] text-[#CFCFCF] mb-4">A108 Adam Street,<br>New
+                        York, NY 535022</p>
+                    <p class="text-sm xl:text-base font-normal leading-[1.625rem] text-[#CFCFCF] mb-4">+88 01750 00 00 00<br>+88
+                        01750 00 00 00</p>
+                    <p class="text-sm xl:text-base font-normal leading-[1.625rem] text-[#CFCFCF]">info@gmail.com<br>info@gmail.com
+                    </p>
+                </nav>
+                <form class="md:col-span-3 lg:col-auto flex flex-col justify-center items-center lg:items-start">
+                    <h6 class="font-garamond text-2xl text-center lg:text-left font-extrabold text-white mb-4 md:mb-8 lg:mb-[2.94rem]">
+                        Subscribe</h6>
+                    <p class="text-sm xl:text-base font-normal text-center lg:text-left leading-[1.625rem] text-[#CFCFCF] mb-6">Subscribe for our latest &
+                        Articles. We Won’t Give You Spam Mails</p>
+                    <fieldset class="mb-12">
+                        <div class="join">
+                            <input type="text" placeholder="Email address"
+                                class="w-8/10 rounded-l-lg bg-white text-base text-[#A0A0A0] px-2 py-4 leading-none " />
+                            <button
+                                class="flex items-center justify-center rounded-r-lg bg-[#B68C5A] w-[4rem] h-[4rem]">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="34" height="34" viewBox="0 0 34 34"
+                                    fill="none">
+                                    <g clip-path="url(#clip0_12_37)">
+                                        <path
+                                            d="M12.7279 21.2427L4.52197 16.8989C10.4846 13.6228 16.9629 11.3888 23.6775 10.2931C22.5826 17.0078 20.3492 23.4863 17.0738 29.4494L12.7279 21.2427ZM12.7279 21.2427L18.0312 15.9394"
+                                            stroke="white" stroke-width="1.5" stroke-linecap="round"
+                                            stroke-linejoin="round" />
+                                    </g>
+                                    <defs>
+                                        <clipPath id="clip0_12_37">
+                                            <rect width="24" height="24" fill="white"
+                                                transform="translate(0 17) rotate(-45)" />
+                                        </clipPath>
+                                    </defs>
+                                </svg>
+                            </button>
+                        </div>
+                    </fieldset>
+                </form>
+            </div>
+            <div>
+                <p class="text-sm xl:text-base font-normal leading-[1.625rem] text-[#CFCFCF] text-center">Copyright © 2027 Justice
+                    - All rights
+                    reserved.
+                </p>
+            </div>
+        </section>
     </footer>
 </body>
 
